# boto3-s3

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml
benchmarks/: RESULTS.md  __init__.py  __main__.py  cli.py  core.py  e2e.py  inprocess.py  report.py  results.py  stubs.py  workload.py
cli/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
cli/src/boto3_s3_cli/: __init__.py  cli.py  clientfactory.py  filters.py  globalargs.py  globals.py  output.py  paramfile.py  progress.py  runtimeconfig.py  shorthand.py  usage.py
cli/src/boto3_s3_cli/autoprompt/: __init__.py  completers.py  model.py  parser.py  prompt.py  prompter.py  resolve.py
cli/src/boto3_s3_cli/commands/: __init__.py  base.py  cp.py  ls.py  mb.py  mv.py  presign.py  rb.py  rm.py  sync.py  transferargs.py  website.py
docs/: autoprompt.md  aws-cli-option-handling.md  benchmark.md  cli.md  crt.md  deleter.md  exceptions.md  globsieve.md  glossary.md  imports.md  masking.md  opresult.md  overview.md  release.md  s3.md  storage.md  sync.md  testing.md  transfer.md
scripts/: compose-up.sh  compose.dev.yaml  install-awscli.cmd  install-awscli.sh  minio-env.cmd  minio-env.sh
src/boto3_s3/: __init__.py  awsclicompare.py  awsconfig.py  checksumcompare.py  checksumfilter.py  comparator.py  concurrency.py  crtsupport.py  deleter.py  etagcompare.py  etagfilter.py  exceptions.py  fileformat.py  globsieve.py  iostorage.py  localstorage.py  masking.py  naming.py  pathresolver.py  producers.py  requestparams.py  s3.py  s3storage.py  sessions.py  storage.py  transfer.py  transferconfig.py  transferplan.py  types.py
tests/: conftest.py  run_case_insensitive_fs.sh  run_e2e.sh
tests/cli/: conftest.py  test_transferargs.py
tests/cli/awscli/: test_cp_command.py  test_ls_command.py  test_mb_command.py  test_mv_command.py  test_presign_command.py  test_rb_command.py  test_rm_command.py  test_s3_object_lambda.py  test_sync_command.py  test_website_command.py
tests/cli/e2e/: conftest.py  test_cp_parity.py  test_crt_parity.py  test_ls_parity.py  test_mb_parity.py  test_mv_parity.py  test_positional_fileb_bug_parity.py  test_presign_parity.py  test_rb_parity.py  test_rm_parity.py  test_sync_parity.py  test_website_parity.py
tests/cli/functional/: conftest.py  test_cp_golden.py  test_crt_optional.py  test_ls_golden.py  test_mb_golden.py  test_mv_golden.py  test_presign_golden.py  test_rb_golden.py  test_rm_golden.py  test_sync_golden.py  test_website_golden.py
tests/cli/goldens/cp/: cp_bad_profile_beats_usage.json  cp_case_conflict_error.json  cp_case_conflict_skip.json  cp_case_conflict_skip.windows.json  cp_case_conflict_warn.json  cp_checksum_crc32c.json  cp_checksum_crc32c.windows.json  cp_checksum_mode_download.json  cp_checksum_mode_download.windows.json  cp_checksum_sha256.json  cp_checksum_sha256.windows.json  cp_checksum_xxhash64.json  cp_checksum_xxhash64.windows.json  cp_copy_metadata_directive_copy.json  cp_copy_metadata_replace.json  cp_copy_missing_key.json  cp_copy_multipart_props.json  cp_copy_nested_dest_filter_cross.json  cp_copy_props_default.json  cp_copy_props_none.json  cp_copy_recursive.json  cp_copy_rename.json  cp_copy_single.json  cp_download_dryrun.json  cp_download_dryrun.windows.json  cp_download_missing_key.json  cp_download_page_size.json  cp_download_page_size.windows.json  cp_download_prefix_slash_nonrecursive.json  cp_download_recursive.json  cp_download_recursive.windows.json  cp_download_recursive_filters.json  cp_download_recursive_filters.windows.json  cp_download_single.json  cp_download_single.windows.json  cp_download_single_exclude_all.json  cp_download_to_existing_dir.json  cp_download_to_existing_dir.windows.json  cp_download_trailing_sep_new_dir.json  cp_download_trailing_sep_new_dir.windows.json  (+60 more)
tests/cli/goldens/ls/: ls_basic.json  ls_bucket_empty.json  ls_empty_prefix.json  ls_endpoint_beats_page_size.json  ls_human_readable.json  ls_nonexistent_bucket.json  ls_object_lambda_arn.json  ls_outpost_bucket_arn.json  ls_page_size.json  ls_page_size_nonint.json  ls_page_size_zero.json  ls_recursive.json  ls_summarize.json  ls_summarize_human.json
tests/cli/goldens/mb/: mb_basic.json  mb_empty_uri.json  mb_express_suffix.json  mb_key_dropped.json  mb_no_scheme.json  mb_tags.json
tests/cli/goldens/mv/: mv_copy_metadata_directive.json  mv_copy_multipart_props.json  mv_copy_recursive.json  (+38 more)
tests/cli/unit/: test_autoprompt.py  test_clientfactory.py  test_command_table.py  test_cp.py  test_debug_logging.py  test_engine_selection.py  test_exit_codes.py  test_filters.py  test_globals.py  test_import_contract.py  test_library_surface.py  test_ls.py  test_mb.py  test_mv.py  test_output.py  test_paramfile.py  test_positional_fileb_exit_codes.py  test_presign.py  test_progress.py  test_rb.py  test_rm.py  test_runtimeconfig.py  test_shorthand.py  test_sync.py  test_transferargs.py  test_website.py
tests/lib/: test_awsconfig.py  test_capture_response.py  test_checksumcompare.py  test_checksumfilter.py  test_comparator.py  test_concurrency.py  test_crtsupport.py  test_deleter.py  test_etagcompare.py  test_etagfilter.py  test_exceptions.py  test_fileformat.py  test_globsieve.py  test_import_contract.py  test_iostorage.py  test_localstorage_walk.py  test_masking.py  test_naming.py  test_pathresolver.py  test_python_version_compat.py  test_requestparams.py  test_s3.py  test_s3_cp.py  test_s3_cp_open.py  test_s3_mb_rb.py  test_s3_mv.py  test_s3_presign.py  test_s3_rm.py  test_s3_sync.py  test_s3_sync_open.py  test_s3_website.py  test_s3storage.py  test_sessions.py  test_storage_as_text.py  test_storage_capability.py  test_transferconfig.py  test_transferplan.py  test_transferrer.py  test_types.py
tests/utils/: cp_scenarios.py  crt_scenarios.py  fakemodel.py  fakes3.py  golden.py  harness.py  host.py  ls_scenarios.py  mb_scenarios.py  mv_scenarios.py  pairbuilders.py  presign_scenarios.py  rb_scenarios.py  recorder.py  rm_scenarios.py  scenario.py  sync_scenarios.py  website_scenarios.py
(+98 files in other folders)
