[project]
name = "boto3-s3"
version = "0.5.0"
description = "A Python library providing `aws s3`-equivalent operations through its own Python API."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Masanao Izumo" },
]
keywords = ["aws", "s3", "boto3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "boto3>=1.28",
    # Imported directly (exceptions, config types); floor per docs/overview.md
    # section 2 (boto3 1.28 already requires it, so this is declarative).
    "botocore>=1.31",
    "s3transfer>=0.6.2",
    "typing-extensions>=4.6",
]

[project.optional-dependencies]
# Opt-in CRT support, forwarding to boto3's own boto3[crt] extra (see docs/crt.md).
crt = ["boto3[crt]>=1.28"]

[project.urls]
Homepage = "https://github.com/izumo-m/boto3-s3"
Repository = "https://github.com/izumo-m/boto3-s3"
Documentation = "https://github.com/izumo-m/boto3-s3#readme"
Issues = "https://github.com/izumo-m/boto3-s3/issues"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.13",
    "ruff>=0.6",
    "pytest>=8.0",
    "vermin>=1.6",
    "boto3-stubs-lite[s3]>=1.34",
    "moto[s3]>=5.0",
    # Keep awscrt present in tests, as aws v2 bundles it (see docs/testing.md).
    "botocore[crt]>=1.34",
    # Keep prompt_toolkit present in tests, as aws v2 bundles it (see docs/testing.md).
    "prompt_toolkit>=3.0",
]

[tool.uv.workspace]
members = ["cli"]

[tool.uv.sources]
boto3-s3 = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["vendor"]
src = ["src", "cli/src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["boto3_s3", "boto3_s3_cli", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
