[project]
name = "boto3-s3-cli"
version = "0.4.0"
description = "An `aws s3` compatible CLI built on the boto3-s3 library."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Masanao Izumo" },
]
keywords = ["aws", "s3", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    # Released in lockstep; floor pins the library version this CLI is built against.
    "boto3-s3>=0.5.0,<0.6.0",
    # Imported directly by build_client (Config / UNSIGNED / signer pin); floor matches boto3-s3's boto3 pin.
    "botocore>=1.31",
]

[project.optional-dependencies]
# Opt-in CRT support, forwarding down the stack to boto3-s3[crt] (see docs/crt.md).
crt = ["boto3-s3[crt]"]
# Opt-in --cli-auto-prompt interactive UI via prompt_toolkit (see docs/autoprompt.md).
autoprompt = ["prompt_toolkit>=3.0"]

[project.scripts]
boto3-s3 = "boto3_s3_cli.cli:main"

[project.urls]
Homepage = "https://github.com/izumo-m/boto3-s3"
Repository = "https://github.com/izumo-m/boto3-s3"
Documentation = "https://github.com/izumo-m/boto3-s3/blob/main/cli/README.md"
Issues = "https://github.com/izumo-m/boto3-s3/issues"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
boto3-s3 = { workspace = true }
